--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:authorities="pt.ipg.projeto1"
+            android:name=".ContentProviderDoentes"
+            android:exported="false" />
     </application>
 
 </manifest>
