tentar a corrigir o erro do ler consulta

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <provider
-            android:authorities="pt.ipg.projeto1"
+            android:authorities="pt.ipg.projeto"
             android:name=".ContentProviderDoentes"
             android:exported="false" />
     </application>
