--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="Projeto"
             android:theme="@style/Theme.Projeto1.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <provider
-            android:authorities="pt.ipg.projeto"
+            android:authorities="pt.ipg.projeto1"
             android:name=".ContentProviderDoentes"
             android:exported="false" />
     </application>
